@@ -42,6 +42,8 @@ Version 1.7.8
        items in the commit dialog. (Stefan)
 - BUG: Issue #336: crash when closing the progress
        dialog too early. (Stefan)
+- BUG: Issue #337: out of memory exception when
+       opening large files in TortoiseMerge. (Stefan)
 
 Version 1.7.7
 - BUG: Issue #233: Crash when closing the
